# mesh_rectangle

./: .gitignore  MeshRectangle.py  README.md  main.py  pyproject.toml  requirements.txt  setup.py
.github/workflows/: ci.yml
Example/: example.py
MeshStructured/: MeshStructured.py  __init__.py  __main__.py  coordinates.py  interpolation.py  plots.py  utils.py
src/Mesh_Structured/: __init__.py  __main__.py  _logging.py  coordinates.py  interpolation.py  io.py  mesh.py  plotting.py
src/mesh_rectangle/: __init__.py  __main__.py  _grid.py  _logging.py  _validation.py  mesh.py
test/: test.py
tests/: conftest.py  test_mesh.py
